--- a/school/courseAll.html
+++ b/school/courseAll.html
@@ -255,8 +255,8 @@
 				insertHtml+="	<a id=\""+objectList[i].tcId+"_"+objectList[i].rcId+"\" href=\"#\" class=\"top "+color_css[i%4]+"\">";//	
 				insertHtml+="		<img src=\""+objectList[i].rcLogo+"\" class=\"photo\" />";
 				insertHtml+="		<p class=\"title\">"+objectList[i].rcName+"</p>";
-				insertHtml+="		<p class=\"content1\">班级："+objectList[i].tcId+"</p>";
-				insertHtml+="		<p class=\"content2\">时间："+objectList[i].rcTime+"</p>";
+				//insertHtml+="		<p class=\"content1\">班级："+objectList[i].tcId+"</p>";
+				//insertHtml+="		<p class=\"content2\">时间："+objectList[i].rcTime+"</p>";
 				insertHtml+="	</a>";
 				insertHtml+="</div>";
 			}else if(index==1){//全部课程
@@ -265,8 +265,8 @@
 				insertHtml+="		<img src=\""+objectList[i].rcLogo+"\" class=\"photo\" />";
 				insertHtml+="		<img src=\"../images/school/sc_add.png\" class=\"arrow\" />";
 				insertHtml+="		<p class=\"title\">"+objectList[i].rcName+"</p>";
-				insertHtml+="		<p class=\"content1\">班级："+objectList[i].tcId+"</p>";
-				insertHtml+="		<p class=\"content2\">时间："+objectList[i].rcTime+"</p>";
+				//insertHtml+="		<p class=\"content1\">班级："+objectList[i].tcId+"</p>";
+				//insertHtml+="		<p class=\"content2\">时间："+objectList[i].rcTime+"</p>";
 				insertHtml+="	</a>";
 				insertHtml+="</div>";
 			}
