--- a/school/showImage.html
+++ b/school/showImage.html
@@ -7,6 +7,7 @@
 		<meta name="MobileOptimized" content="320"/>
 		<title>图片预览</title>
 		<script type="text/javascript" src="../js/H5Plus.js"></script>
+		<script type="text/javascript" src="../js/H5Plus-quit.js"></script>
 		<script type="text/javascript">
 var w=null;
 // H5 plus事件处理
@@ -40,6 +41,8 @@ function imgError(){
 function loadMedia(src){
 	document.getElementById('img').src=src;
 }
+ 
+
 		</script>
 		<link rel="stylesheet" href="../css/H5Plus.css" type="text/css" charset="utf-8"/>
 		<style type="text/css" media="screen">
