--- a/school/showVideo.html
+++ b/school/showVideo.html
@@ -7,6 +7,7 @@
 		<meta name="MobileOptimized" content="320"/>
 		<title>视频预览</title>
 		<script type="text/javascript" src="../js/H5Plus.js"></script>
+		<script type="text/javascript" src="../js/H5Plus-quit.js"></script>
 		<script type="text/javascript">
 var v=null;
 function loadMedia( src ) {
