完善附件上传逻辑，实现课程“学习体会”、“活动申请”“活动集锦”“我的作品”界面的附件上传。

--- a/school/courseDetails.html
+++ b/school/courseDetails.html
@@ -32,7 +32,7 @@
 		<ul id="list" class="course-detail-ui" >
 			<li v-for="item in courseDetails">
 				<div class="content-div">
-					<div class="content-title">{{item.chapClassName}}</div>
+					<!--<div class="content-title">{{item.chapClassName}}</div>-->
 					<img class="content-img" v-bind:src="item.chapFile"> 
 					<p class="content-desc">{{item.chapDesc}}</p> 
 				</div>
