--- a/school/activityList.html
+++ b/school/activityList.html
@@ -248,18 +248,18 @@
 		}); 
 		 
 		mui(document.body).on('tap', '#activity_add_detail', function() {
-		    console.info("1");
+		    //console.info("1");
 			//console.info("this.href:  " + this.href);
 			mui.fire(webview_activity_add_detail, 'get_activity_add_detail', {
 				//activityId: id
 			}); 
 			
-			console.info("2");
+			//console.info("2");
 			setTimeout(function () {
 				webview_activity_add_detail.show("slide-in-right", 300);
 			},150);
 			
-			console.info("3");
+			//console.info("3");
 		});
 		
 		 
