--- a/school/everyoneWorks.html
+++ b/school/everyoneWorks.html
@@ -176,7 +176,17 @@
 			//vm.resetData();
 		},false);
 		 
-		  
+		app.getEveryoneWorkList(vm_everyone_work.activityId,1,function(data){
+			console.info(JSON.stringify(data));
+			if(data.code==0){
+				if(data.object!=undefined){											
+					vm_everyone_work.workList=data.object.rows;
+					console.info(JSON.stringify(vm_everyone_work.workList));
+				} 
+			}
+			mui.toast(data.msg); 
+		});
+  
 	})
 	
 </script>
