--- a/school/courseAll.html
+++ b/school/courseAll.html
@@ -65,9 +65,9 @@
 			</div>
 		</div>
  
-		<div id="item2" class="item-call mui-content mui-control-content mui-fullscreen" style="top:27px;bottom: 50px;">
+		<div id="item2" class="item-call mui-content mui-control-content mui-fullscreen" style="top:0px;bottom: 50px;">
 			<div id="slider" class="mui-slider mui-fullscreen" style="top:0px;">
-				<div class="mui-segmented-control desc-control">
+				<div class="mui-segmented-control desc-control" style="margin-bottom: 50px; top: 0px !important;">
 					<a class="mui-control-item mui-active " href="#item11"><span>全部</span></a>
 					<!--<a class="mui-control-item " href="#item12"><span>自然</span></a>
 					<a class="mui-control-item " href="#item13"><span>体育</span></a>
@@ -75,7 +75,7 @@
 					<a class="mui-control-item " href="#item15"><span>音乐</span></a> 
 					<a class="mui-control-item " href="#item16"><span>历史</span></a>-->
 				</div>
-				<div class="mui-slider-group mui-fullscreen" style="top:37px;bottom: 0px;">
+				<div class="mui-slider-group mui-fullscreen" style="top:64px;bottom: 0px; padding-top: 10px;">
 					<div id="item11" class="mui-slider-item mui-control-content mui-active" style="margin-top:0px;">
 						<div id="scroll1" class="mui-scroll-wrapper">
 							<div class="mui-scroll">
