清空待选附件列表，修复我的作品提交BUG。

--- a/school/activityReply.html
+++ b/school/activityReply.html
@@ -192,6 +192,7 @@
 				//onsole.info(JSON.stringify(data));
 				app.postActivityReply(data,function(data){
 					if(data.code==0){
+						selectFileList.splice(0,selectFileList.length);
 						mui.back();
 					}
 					mui.toast(data.msg);
