--- a/school/courseExperience.html
+++ b/school/courseExperience.html
@@ -145,7 +145,8 @@
 			}
 			console.info(JSON.stringify(data));
 			app.postCourseExperience(data,function(data){
-				if(data.code==0){				
+				if(data.code==0){	
+					selectFileList.splice(0,selectFileList.length);			
 					mui.back(); 
 				}
 				mui.toast(data.msg);
