--- a/school/setTeacherfo.html
+++ b/school/setTeacherfo.html
@@ -141,8 +141,8 @@
 			data=vm_set_teacher.teacherInfo; 
 			console.info(JSON.stringify(data));
 			app.postSetTeacherInfo(data,function(data){
-				if(data.code==0){
-					
+				if(data.code==0){ 
+					selectFileList.splice(0,selectFileList.length);	
 				}
 				mui.toast(data.msg);
 			});
