变更个人中心，变更学生详情，walking添加特殊标记。

--- a/school/setStudentInfo.html
+++ b/school/setStudentInfo.html
@@ -52,10 +52,26 @@
 				<label>班级 <span style="color:red;"> *</span></label>
 				<input type="text" v-model="studentInfo.stdClassName"  placeholder="班级"/>
 			</div>
+			<div class="mui-input-row">
+				<label>学号 <span style="color:red;"> *</span></label>
+				<input type="text" v-model="studentInfo.stdNo"  placeholder="学号"/>
+			</div>
+			<div class="mui-input-row">
+				<label>身高 <span style="color:red;"> *</span></label>
+				<input type="text" v-model="studentInfo.stdHeight"  placeholder="年龄"/>
+			</div>
+			<div class="mui-input-row">
+				<label>体重 <span style="color:red;"> *</span></label>
+				<input type="text" v-model="studentInfo.stdWeight"  placeholder="体重（kg)"/>
+			</div>
+			<div class="mui-input-row">
+				<label>年龄 <span style="color:red;"> *</span></label>
+				<input type="text" v-model="studentInfo.stdAge"  placeholder="年龄"/>
+			</div>
 
 			<div class="mui-input-row">
-				<label>详细地址 <span style="color:red;"> *</span></label>
-				<input type="text" v-model="studentInfo.stdAddress"  placeholder="详细地址"/>
+				<label>个人简介<span style="color:red;"> *</span></label>
+				<input type="text" v-model="studentInfo.stdDesc"  placeholder="个人简介"/>
 			</div>
 
 
