--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -18,15 +18,15 @@
 		
 	<header class="mui-bar mui-bar-nav" style="height: 260px;
     background: url(../images/school/psct_top.png);background-size: cover">
-		<a href="#" id="personal_center_set_link" class="mui-icon mui-icon-compose mui-pull-right"></a>
+		<a href="#" id="personal_center_set_link" class="mui-icon mui-icon-compose mui-pull-right" style="text-shadow: 0px 2px 2px #333333"></a>
 		<img src="../images/school/head-btm.png" class="head-pic-btm">
 		<img src="../images/school/ct-dianzhui.png" class="dz-icon">
 		
 		<img :src="headPic" class="head-pic">
 		<p class="user-name">{{userInfo.realName}}</p>
 		<div v-if="userInfo.roleType==3">
-			<p class="class-name">{{userInfo.studentsDetail.stdGradeName}}{{userInfo.studentsDetail.stdClassName}}</p>
-			<p class="school-name">{{userInfo.studentsDetail.showSchoolName}}</p> 
+			<p class="class-name">年级：{{userInfo.studentsDetail.stdGradeName}} &nbsp;&nbsp;班级：{{userInfo.studentsDetail.stdClassName}}</p> 
+			<p class="school-name">学校：{{userInfo.studentsDetail.showSchoolName}}</p> 
 		</div>
 		<div v-if="userInfo.roleType==2">
 			<p class="class-name">{{thGenderName}}</p>
