--- a/school/activityList.html
+++ b/school/activityList.html
@@ -16,7 +16,9 @@
 	<link href="../css/school/activityList.css" rel="stylesheet"/>
     <link href="../css/school/pushCommon.css" rel="stylesheet"/>
 </head>
-<body>
+<body  class="pagebg  bg_gradient">
+	<div id="activity_list_content">
+		
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<img src="../images/head-dz.png" class="head-dz"/>
@@ -46,22 +48,24 @@
 	</nav>
 
  
-	<div id="slider" class="mui-slider mui-content mui-fullscreen">				
-		<div class="mui-slider-group">
-			<div id="item_activity_list" class="mui-slider-item mui-control-content mui-active">
-				<div id="scroll1" class="mui-scroll-wrapper">
-					<div class="mui-scroll">
-						<ul id="activity_list_list" class="mui-table-view">
-							 
-						</ul>
+	<div id="item1" class="item-call mui-content mui-control-content mui-fullscreen mui-active" style="top:64px;bottom: 50px;background: #eee;">
+		<div id="slider" class="mui-slider mui-fullscreen">				
+			<div class="mui-slider-group">
+				<div id="item_activity_list" class="mui-slider-item mui-control-content mui-active">
+					<div id="scroll1" class="mui-scroll-wrapper">
+						<div class="mui-scroll">
+							<ul id="activity_list_list" class="mui-table-view">
+								 
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-			
 		</div>
 	</div>
 			
 
+	</div>
 	<script src="../js/jquery-2.1.4.min.js"></script>
 	<script src="../js/mui.min.js"></script>
 	<script src="../js/mui.pullToRefresh.js"></script>
