--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -50,8 +50,9 @@
 
 		<div class="show-desc">
 			<div class="show-desc-right">
-				<div v-if="courseInfo.hasPart==1" id="activity_detail_quit" class="ac-end-quit">退出</div>
-				<div v-else  id="activity_detail_join" class="ac-end-join">加入</div>
+				<div v-if="courseInfo.actEnd==1 && courseInfo.hasPart==1" id="activity_detail_quit" class="ac-end-quit">退出</div>
+				<div v-else-if="courseInfo.actEnd==1"  id="activity_detail_join" class="ac-end-join">加入</div>
+				<div v-else id="activity_detail_join_end" class="ac-end">结束</div>
 				<p style="font-size: 12px !important;">剩余名额{{courseInfo.surplustCount}}人</p>
 			</div>
 			<div class="show-desc-left">
@@ -109,7 +110,8 @@
 		el: '#actiity-detail-content',
 		data: {
 			userInfo:{roleType:2},
-			courseInfo:{
+			courseInfo:{actEnd:2,
+				hasPart:0
 		   } 
 				
 		} 
@@ -210,8 +212,10 @@
 			 post_activity_detail_join();
 		}); 
 		
-		
-		
+		mui('#actiity-detail-content').on('tap','#activity_detail_join_end',function(){
+			mui.toast("活动已经结束！");
+		}); 
+		 
 	})
 	
 	/**
@@ -247,7 +251,9 @@
 		//触发子窗口变更详情
 		mui.fire(webview_activity_my_works, 'get_activity_my_works', {
 				activityId: activityId,
-				actName:vm_activity_detail.courseInfo.actName
+				actName:vm_activity_detail.courseInfo.actName,
+				aswId:vm_activity_detail.courseInfo.aswId,
+				actEnd:vm_activity_detail.courseInfo.actEnd
 			});
  
 		setTimeout(function () {
