--- a/school/everyoneWorks.html
+++ b/school/everyoneWorks.html
@@ -20,7 +20,6 @@
 	<link href="../css/top.css" rel="stylesheet"/>
 	<link href="../css/school/everyoneWorks.css" rel="stylesheet"/>
     <link href="../css/school/pushCommon.css" rel="stylesheet"/>
-    <link href="../css/H5MediaFile.css" rel="stylesheet"/>
     <style>
     	.slide-fade-enter-active {
 		  transition: all .5s ease;
@@ -150,63 +149,63 @@
 			},
 	 
 			workList:[
-			{
-                "aswId": 3,
-                "aswStudentId": 24,
-                "aswDesc": "喜欢打电话的",
-                "aswStudentName": "  200",
-                "aswActId": 3,
-                "aswAsId": 5,
-                "aswPointNum": 1,
-                "aswCommentNum": 2,
-                "showStudentPic": "http://112.124.110.182:11008/upload/studentPicture/20170812/B20170812184037_d0959b7a25b64a80ac9bbfa428b7110b.png",
-                "activityStudentsWorksFilesList": [
-                    {
-                        "aswfId": 3,
-                        "aswfTime": "2017-08-25 22:58:22",
-                        "aswfStudentId": 24,
-                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
-                        "aswfStudentName": "  200",
-                        "aswfActId": 3,
-                        "aswfAswId": 3
-                    },
-                    {
-                        "aswfId": 4,
-                        "aswfTime": "2017-08-25 22:58:25",
-                        "aswfStudentId": 24,
-                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1500030347631.jpg20170825224736_2ce220c937c64d6c9f7f137062f2cb5f.jpg",
-                        "aswfStudentName": "  200",
-                        "aswfActId": 3,
-                        "aswfAswId": 3
-                    },
-                    {
-                        "aswfId": 5,
-                        "aswfTime": "2017-08-25 22:58:28",
-                        "aswfStudentId": 24,
-                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672467553.amr20170825224750_47808e84e7cc4ca885452e606d0a4966.amr",
-                        "aswfStudentName": "  200",
-                        "aswfActId": 3,
-                        "aswfAswId": 3
-                    },
-                    {
-                        "aswfId": 6,
-                        "aswfTime": "2017-08-25 23:03:54",
-                        "aswfStudentId": 24,
-                        "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
-                        "aswfStudentName": "  200",
-                        "aswfActId": 3,
-                        "aswfAsId": 5,
-                        "aswfAswId": 3
-                    } 
-                ],
-                "activityCommentList": []
-            }
+//			{
+//              "aswId": 3,
+//              "aswStudentId": 24,
+//              "aswDesc": "喜欢打电话的",
+//              "aswStudentName": "  200",
+//              "aswActId": 3,
+//              "aswAsId": 5,
+//              "aswPointNum": 1,
+//              "aswCommentNum": 2,
+//              "showStudentPic": "http://112.124.110.182:11008/upload/studentPicture/20170812/B20170812184037_d0959b7a25b64a80ac9bbfa428b7110b.png",
+//              "activityStudentsWorksFilesList": [
+//                  {
+//                      "aswfId": 3,
+//                      "aswfTime": "2017-08-25 22:58:22",
+//                      "aswfStudentId": 24,
+//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
+//                      "aswfStudentName": "  200",
+//                      "aswfActId": 3,
+//                      "aswfAswId": 3
+//                  },
+//                  {
+//                      "aswfId": 4,
+//                      "aswfTime": "2017-08-25 22:58:25",
+//                      "aswfStudentId": 24,
+//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1500030347631.jpg20170825224736_2ce220c937c64d6c9f7f137062f2cb5f.jpg",
+//                      "aswfStudentName": "  200",
+//                      "aswfActId": 3,
+//                      "aswfAswId": 3
+//                  },
+//                  {
+//                      "aswfId": 5,
+//                      "aswfTime": "2017-08-25 22:58:28",
+//                      "aswfStudentId": 24,
+//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672467553.amr20170825224750_47808e84e7cc4ca885452e606d0a4966.amr",
+//                      "aswfStudentName": "  200",
+//                      "aswfActId": 3,
+//                      "aswfAswId": 3
+//                  },
+//                  {
+//                      "aswfId": 6,
+//                      "aswfTime": "2017-08-25 23:03:54",
+//                      "aswfStudentId": 24,
+//                      "aswfFiles": "http://112.124.110.182:11008/upload/TaskExecPicture/20170825//1503672443675.jpg20170825224730_d0841e80f28a482e86afd3c176ae064f.jpg",
+//                      "aswfStudentName": "  200",
+//                      "aswfActId": 3,
+//                      "aswfAsId": 5,
+//                      "aswfAswId": 3
+//                  } 
+//              ],
+//              "activityCommentList": []
+//          }
 			]
 		},
 		methods:{
 			getDisplayType:function(patch){
 				var type=0;
-				console.info(patch);
+				//console.info(patch);
 				if(patch){
 					var suffix = patch.substr(patch.lastIndexOf('.'));
 					if(suffix=='.mov' || suffix=='.3gp' || suffix=='.mp4' || suffix=='.avi'){
@@ -222,7 +221,7 @@
 			},
 			getDisplayStyle:function(patch){
 				var type="width: 70%; margin: 2px;float:left;";
-				console.info(patch);
+				//console.info(patch);
 				if(patch){
 					var suffix = patch.substr(patch.lastIndexOf('.'));
 					if(suffix=='.mov' || suffix=='.3gp' || suffix=='.mp4' || suffix=='.avi'){
@@ -327,7 +326,7 @@
 		activityId = event.detail.activityId;
 		console.info(activityId);
 		vm_everyone_work.activityId=activityId;
-		
+		vm_everyone_work.commentInfo.actComActId=activityId;
 		app.getEveryoneWorkList(vm_everyone_work.activityId,1,function(data){
 			console.info(JSON.stringify(data));
 			if(data.code==0){
@@ -365,6 +364,7 @@
 		data=vm_everyone_work.commentInfo;
 		data.manageId=userInfo.manageId;
 		data.actAswId=item.aswId; 
+		data.actComActId=vm_everyone_work.activityId;
 		data.actComType=3;//  1：学校秀；2：班级秀 3： 普通作品
 		data.actComIsPoint=1;//  1：点赞；2：评论
 		data.actObject=2;//点赞或者评论的对象（1:针对活动；2:针对作品）
@@ -373,7 +373,7 @@
 			if(data.code==0){
 				//mui.back(); 
 				vm_everyone_work.commentInfo={};  
-				item.actFinePintNum++;
+				item.aswPointNum++;
 			}
 			mui.toast(data.msg);
 		});
@@ -390,6 +390,7 @@
 		var userInfo = app.getState();
 		var data={};
 		data=vm_everyone_work.commentInfo;
+		data.actComActId=vm_everyone_work.activityId;
 		data.manageId=userInfo.manageId;
 		data.actComType=3;//  1：学校秀；2：班级秀 3： 普通作品
 		data.actComIsPoint=2;//  1：点赞；2：评论
@@ -400,7 +401,7 @@
 				//mui.back(); 
 				vm_everyone_work.commentInfo={}; 
 				vm_everyone_work.showInputFlag=false;
-				pushScShowAllDown('',0,true); 
+				pushEveryoneWorksDown('',true); 
 				 
 			}
 			mui.toast(data.msg);
