--- a/school/scShowAll.html
+++ b/school/scShowAll.html
@@ -75,7 +75,7 @@
 		</a>
 	</nav>
  
-	<div id="item1" class="item-call mui-content mui-control-content mui-fullscreen mui-active" style="top:64px;bottom: 50px;">
+	<div id="item1" class="item-call mui-content mui-control-content mui-fullscreen mui-active" style="top:64px;bottom: 50px;background: #eee;">
 		<div id="slider" class="mui-slider mui-fullscreen">				
 			<div class="mui-slider-group">
 				<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
@@ -132,7 +132,7 @@
 	</div>
 
 	
-	<div id="item2" class="item-call mui-content mui-control-content mui-fullscreen" style="top:64px;bottom: 50px;">
+	<div id="item2" class="item-call mui-content mui-control-content mui-fullscreen" style="top:64px;bottom: 50px;background: #eee;">
 		<div id="slider" class="mui-slider mui-fullscreen">				
 			<div class="mui-slider-group">
 				<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
