统一地址，交流区上传文件bug

--- a/school/exchangeArea.html
+++ b/school/exchangeArea.html
@@ -157,7 +157,7 @@
 				},
 				getDisplayType:function(patch){
 					var type=0;
-					console.info(patch);
+					//console.info(patch);
 					if(patch){
 						var suffix = patch.substr(patch.lastIndexOf('.'));
 						if(suffix=='.mov' || suffix=='.3gp' || suffix=='.mp4' || suffix=='.avi'){
@@ -173,7 +173,7 @@
 				},
 				getShowType:function(item){
 					var type=0;
-					console.info(JSON.stringify(item));
+					//console.info(JSON.stringify(item));
 					var suffix = item.patch.substr(item.patch.lastIndexOf('.'));
 					if(item.type==1){
 						if(suffix=='.mov' || suffix=='.3gp' || suffix=='.mp4' || suffix=='.avi'){
@@ -199,7 +199,7 @@
 					}else{
 						cssStyle="ditem file-color2";
 					}
-					console.info(cssStyle);
+					//console.info(cssStyle);
 					return cssStyle;
 				}
 			}
@@ -279,11 +279,12 @@
     	var userInfo = app.getState(); 
 		if(userInfo.manageId!=undefined && userInfo.manageId!=''){
 			app.getExchangeAreaList(vm_exchange_area.classId,1,function(data){
-				console.info(JSON.stringify(data));
+				//console.info(JSON.stringify(data));
 				if(data.code==0){
-					if(data.object!=undefined){											
-						vm_exchange_area.acAreaList=data.object.rows;
-						console.info(JSON.stringify(vm_exchange_area.acAreaList));
+					if(data.object!=undefined){
+						vm_exchange_area.acAreaList.splice(0,vm_exchange_area.acAreaList.length);
+						vm_exchange_area.acAreaList=vm_exchange_area.acAreaList.concat(data.object.rows);
+						//console.info(JSON.stringify(vm_exchange_area.acAreaList));
 					}
 				 	pageIndex=1;
 				}
@@ -339,6 +340,7 @@
 						pushExchangeAreaDown("",true);
 					}
 				}
+				if(refurbishFlag)
 				mui.toast(data.msg);
 			});
     }
